Evoluzione T4
- Migliorato import librerie;
- Aggiunto JavaDoc;
- Spostata gestione dei DTO da controller a service;
- Aggiunti mapper con mapstruct;
- Aggiunta dipendenza lombok.